<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:rowCount="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/txtTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cdTxtEditText"
            android:hint="@string/txtEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/txtTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:contentDescription="@string/cdTxtTextBox"
        android:gravity="start"
        android:hint="@string/txtTextBox"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/txtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:contentDescription="@string/cdTxtButton"
        android:gravity="center"
        android:text="@string/txtButton" />

    <Button
        android:id="@+id/txtButton_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:contentDescription="@string/cdTxtButton_1"
        android:gravity="center"
        android:text="@string/txtButton_1" />

</GridLayout>