<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rowCount="6"
    android:columnCount="2">

    <TextView
        android:id="@+id/txtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/ftTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cdFtEditText"
            android:hint="@string/ftEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:contentDescription="@string/cdFtGallery">

        <GridLayout
            android:id="@+id/imagesGridLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical">

        </GridLayout>

    </ScrollView>

    <Button
        android:id="@+id/ftButton"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:contentDescription="@string/cdFtButton"
        android:gravity="center"
        android:text="@string/ftButton" />

    <Button
        android:id="@+id/ftButton_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:contentDescription="@string/cdFtButton_1"
        android:gravity="center"
        android:text="@string/ftButton_1" />

    <ImageView
        android:id="@+id/camFtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:contentDescription="@string/cdFtCamButton"
        android:gravity="center"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</GridLayout>